# simp-intelligence

./: .gitignore  .gitmodules  README.md  Untitled.ipynb  pixi.toml  pyproject.toml
simp_intelligence/: hello_world.ipynb  layers.ipynb
simp_intelligence/cuda/: CUDA_graph.ipynb  Makefile  cuda-graph.ipynb  cuda-nsight.ipynb  hello_world.cu
simp_intelligence/cute-dsl/: cute.ipynb  hilt.ipynb
simp_intelligence/gpu/: blackwell.ipynb  flash_and_flex_attention.ipynb  flash_attention.ipynb  floating_point.ipynb  generations.ipynb  latency_numbers.ipynb  memory_bank.ipynb  tradeoffs.ipynb
simp_intelligence/huggingface/: llama.ipynb  trainer.ipynb
simp_intelligence/math/: SGD.ipynb  chain_rule_and_jacobian.ipynb  flash_attn.ipynb  layout.py  layout_advanced.ipynb  layout_basics.ipynb  layout_divide.ipynb  layout_product.ipynb  lipschitz.ipynb  numerical_differentiation.ipynb  online_flash_attn.ipynb
simp_intelligence/math/tract/: README.md  pyproject.toml
simp_intelligence/math/tract/examples/: example_notebook.ipynb
simp_intelligence/math/tract/src/tract/: __init__.py  categories.py  layout_utils.py  test_utils.py  tuple_morph_tikz.py
simp_intelligence/math/tract/tests/: __init__.py  morphism_tests.py
simp_intelligence/mojo-lang/: buffer.ipynb  hello_gpu.mojo  hello_world.ipynb  layout.ipynb  matmul_visualization.ipynb  matmul_visualization.mojo  run_mojo_kernels.ipynb
simp_intelligence/python-lang/: coroutine.ipynb  debug.ipynb  profile.ipynb
simp_intelligence/sglang/: requests.ipynb
simp_intelligence/torch/: .gitignore  advanced_indexing.ipynb  (+12 more)
(+14 files in other folders)
