[project]
name = "simp-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "jupyter-collaboration>=4.1.1",
    "matplotlib>=3.10.6",
    "modular>=25.6.0",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "nvidia-cutlass-dsl>=4.2.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "triton>=3.4.0",
]
