[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tract"
version = "0.1.0"
description = "A Python library for category-theoretic foundations of CuTe layouts"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["category-theory", "morphisms", "gpu", "cuda", "cute", "layouts"]
dependencies = [
    "nvidia-cutlass-dsl>=4.2.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
"Homepage" = "https://research.colfax-intl.com/categorical-foundations-for-cute-layouts/"
"Bug Reports" = "https://github.com/ColfaxResearch/layout-categories/issues"
"Source" = "https://github.com/ColfaxResearch/layout-categories"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]